--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,7 @@
 .profile {
   display: flex;
   align-items: center;
-  padding-top: 40px;
+  padding-top: 36px;
 }
 
 .profile__image {
@@ -9,6 +9,7 @@
   width: 120px;
   object-fit: cover;
   margin-right: 24px;
+  border-radius: 50%;
 }
 
 .profile__info {
@@ -20,11 +21,12 @@
 }
 
 .profile__title {
+  max-width: 373px;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
   grid-area: title;
-  margin: 0;
+  margin: 0 0 7px 0;
 }
 
 .profile__description {
@@ -40,6 +42,9 @@
   height: 24px;
   width: 24px;
   grid-area: button;
+  border-width: 1px;
+  border-color: white;
+  margin-left: 18px;
 }
 
 .profile__add-button {
@@ -47,4 +52,35 @@
   width: 150px;
   height: 50px;
   margin-left: auto;
+  border-radius: 2px;
+  border-width: 2px;
+  border-color: white;
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__info {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    line-height: 1.1;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    width: 100%;
+  }
 }
