Enter media quaries submittion 1

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -48,3 +48,9 @@
   height: 18px;
   border-style: none;
 }
+
+.card__like-button:hover {
+  opacity: 0.5;
+  transition: 1s linear;
+  cursor: pointer;
+}
