--- a/blocks/header.css
+++ b/blocks/header.css
@@ -3,3 +3,21 @@
   border-bottom: rgba(84, 84, 84, 0.7) solid 1px;
   padding-bottom: 41px;
 }
+
+.header__logo {
+  width: 173px;
+  height: 33px;
+}
+
+@media screen and (max-width: 480px) {
+  .header {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .header__logo {
+    width: 126px;
+    height: 24px;
+    margin: 28px 0 32px 27px;
+  }
+}
