--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,14 +1,14 @@
 .profile {
   display: flex;
   align-items: center;
-  padding-top: 36px;
+  padding-top: 40px;
 }
 
 .profile__image {
   height: 120px;
   width: 120px;
   object-fit: cover;
-  margin-right: 24px;
+  margin-right: 30px;
   border-radius: 50%;
 }
 
@@ -44,7 +44,14 @@
   grid-area: button;
   border-width: 1px;
   border-color: white;
-  margin-left: 18px;
+  margin: 0 12px 0 18px;
+  align-self: center;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
+  transition: 1s linear;
+  cursor: pointer;
 }
 
 .profile__add-button {
@@ -53,13 +60,53 @@
   height: 50px;
   margin-left: auto;
   border-radius: 2px;
-  border-width: 2px;
-  border-color: white;
+  border: 2px solid #fff;
+}
+
+.profile__add-button:hover {
+  opacity: 0.6;
+  transition: 1s linear;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 480px) {
   .profile {
+    padding-top: 42px;
+  }
+
+  .profile__info {
+    margin-top: 30px;
+  }
+  .profile__title {
+    max-width: 196px;
+    line-height: 1.2;
+    margin: 0;
+  }
+
+  .profile__description {
+    margin: 14px 0 36px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+  }
+
+  .profile__add-button {
+    max-width: 282px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .profile {
     flex-direction: column;
+  }
+
+  .profile__image {
+    margin-right: 0;
   }
 
   .profile__info {
