--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -41,7 +41,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 281px;
+  max-width: 415px;
 }
 
 .profile__edit-button {
@@ -76,65 +76,68 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 480px) {
-  .profile {
-    padding-top: 42px;
-  }
-
-  .profile__info {
-    margin-top: 30px;
-  }
-  .profile__title {
-    max-width: 196px;
-    line-height: 1.2;
-    margin: 0;
-  }
-
-  .profile__description {
-    margin: 14px 0 36px;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-  }
-
-  .profile__edit-button {
-    width: 18px;
-    height: 18px;
-  }
-
-  .profile__add-button {
-    max-width: 282px;
-  }
-}
-
 @media screen and (max-width: 760px) {
-  .profile {
-    flex-direction: column;
-  }
-
   .profile__image {
-    margin-right: 0;
+    margin-right: 15px;
   }
 
   .profile__info {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
-    justify-content: center;
   }
 
   .profile__title {
-    font-size: 22px;
-    line-height: 1.1;
+    font-size: 36px;
+    line-height: 48px;
+    max-width: 300px;
   }
 
   .profile__description {
     width: 100%;
-    text-align: center;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin: 0 0 0 10px;
   }
 
   .profile__add-button {
     margin: 0;
-    width: 100%;
+    max-width: 150px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .profile {
+    padding-top: 42px;
+    flex-direction: column;
+  }
+
+  .profile__image {
+    margin: 0;
+  }
+
+  .profile__info {
+    margin-top: 30px;
+    justify-content: center;
+  }
+  .profile__title {
+    max-width: 196px;
+    line-height: 1.2;
+    margin: 0;
+    font-size: 22px;
+  }
+
+  .profile__description {
+    margin: 14px 0 36px;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    min-width: 282px;
   }
 }
