--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -61,7 +61,7 @@
   justify-content: center;
 }
 
-.modal__title {
+.modal__input {
   margin: 54px 0 30px 0;
   height: 27px;
   padding: 0 0 0 5px;
@@ -71,26 +71,11 @@
   line-height: 1.2;
 }
 
-.modal__title::placeholder {
-  color: #000;
-}
-
-.modal__description {
-  border: none;
-  height: 27px;
-  padding: 0 0 0 5px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+.modal__input:last-of-type {
   margin: 0 0 48px;
-  font-size: 14px;
-  line-height: 1.2;
-}
-
-.modal__description::placeholder {
-  color: #000;
 }
 
 .modal__button {
-  width: 358px;
   height: 50px;
   border-radius: 2px;
   color: white;
@@ -139,15 +124,11 @@
     font-size: 18px;
   }
 
-  .modal__title {
+  .modal__input {
     margin: 75px 0 30px 0;
-    height: 27px;
-    min-width: 238px;
   }
 
-  .modal__description {
+  .modal__input:last-of-type {
     margin: 0 0 45px;
-    height: 27px;
-    min-width: 238px;
   }
 }
