feat/preview modal needs styles

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -59,3 +59,9 @@
   right: 15px;
   border-style: none;
 }
+
+.card__trash-button:hover {
+  opacity: 0.6;
+  transition: 1s linear;
+  cursor: pointer;
+}
