--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -49,6 +49,30 @@
   transition: 1s linear;
 }
 
+.preview__modal-close-button {
+  background-image: url("../images/Close\ button\ icon.svg");
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  position: absolute;
+  top: -45px;
+  right: -45px;
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.preview__modal-close-button:hover {
+  opacity: 0.8;
+  transition: 1s linear;
+}
+
+.modal__close:hover {
+  opacity: 0.6;
+  transition: 1s linear;
+}
+
 .modal__heading {
   color: black;
   max-width: 330px;
@@ -98,8 +122,8 @@
 }
 
 .modal__preview-image {
-  width: 433px;
-  height: 540px;
+  max-width: 75vw;
+  max-height: 75vh;
 }
 
 .modal__preview-title {
@@ -130,6 +154,13 @@
     margin: 0;
     font-size: 14px;
     line-height: 1.2;
+  }
+
+  .preview__modal-close-button {
+    width: 26px;
+    height: 26px;
+    top: -28px;
+    right: -28px;
   }
 }
 
