--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -8,8 +8,14 @@
   background-color: rgba(0, 0, 0, 0.5);
   padding: 0 19px;
   display: none;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
+.modal:hover {
+  opacity: 1;
+  transition-delay: 0s;
+}
 .modal_opened {
   display: flex;
 }
