--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -7,17 +7,16 @@
   z-index: 99;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 0 19px;
-  display: none;
+  display: flex;
+  visibility: hidden;
   opacity: 0;
   transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
-.modal:hover {
+.modal_opened {
+  visibility: visible;
   opacity: 1;
   transition-delay: 0s;
-}
-.modal_opened {
-  display: flex;
 }
 
 .modal__container {
@@ -29,11 +28,6 @@
   height: 330px;
   box-sizing: border-box;
   padding: 34px 36px 36px;
-}
-
-.preview__modal-container {
-  position: relative;
-  margin: auto;
 }
 
 .modal__close {
@@ -48,30 +42,6 @@
   height: 40px;
   background-repeat: no-repeat;
   background-size: contain;
-}
-
-.modal__close:hover {
-  opacity: 0.6;
-  transition: 1s linear;
-}
-
-.preview__modal-close-button {
-  background-image: url("../images/Close\ button\ icon.svg");
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  position: absolute;
-  top: -45px;
-  right: -45px;
-  width: 40px;
-  height: 40px;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.preview__modal-close-button:hover {
-  opacity: 0.8;
-  transition: 1s linear;
 }
 
 .modal__close:hover {
@@ -127,6 +97,30 @@
   transition: 1s linear;
 }
 
+.preview__modal-container {
+  position: relative;
+  margin: auto;
+}
+
+.preview__modal-close-button {
+  background-image: url("../images/Close\ button\ icon.svg");
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  position: absolute;
+  top: -45px;
+  right: -45px;
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.preview__modal-close-button:hover {
+  opacity: 0.6;
+  transition: 1s linear;
+}
+
 .modal__preview-image {
   max-width: 75vw;
   max-height: 75vh;
@@ -137,6 +131,7 @@
   font-size: 12px;
   line-height: 1.2px;
 }
+
 @media screen and (max-width: 630px) {
   .modal__container {
     max-width: 282px;
