--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -80,6 +80,18 @@
   margin: 0 0 48px;
 }
 
+.modal__error {
+  font-size: 12px;
+  line-height: 1.2;
+  color: #ff0000;
+  font-family: "Inter", "Arial", sans-serif;
+  height: 7px;
+}
+
+.modal__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
 .modal__button {
   height: 50px;
   border-radius: 2px;
