--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -86,14 +86,24 @@
   color: #ff0000;
   font-family: "Inter", "Arial", sans-serif;
   height: 7px;
+  position: absolute;
+  top: 200px;
+  left: 40px;
+}
+
+.modal__error:first-of-type {
+  position: absolute;
+  top: 143px;
+  left: 40px;
 }
 
 .modal__input_type_error {
   border-bottom: 1px solid #ff0000;
 }
-/* .modal__error_visible {
-  border-bottom: 1px solid #ff0000;
-} */
+
+.modal__error_visible {
+  transition: 1s linear;
+}
 
 .modal__button {
   height: 50px;
