Enter reviewer errors

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -124,6 +124,11 @@
 
 .modal__button_disabled {
   opacity: 0.2;
+  cursor: default;
+}
+
+.modal__button_disabled:hover {
+  opacity: 0.2;
 }
 
 .modal__preview-container {
